[package]
name = "embassy-knx"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.3.1", features = ["defmt", "nrf5340-net", "time-driver-rtc1", "gpiote", "unstable-pac"] }
#embassy-net = { version = "0.6.0", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
#embassy-usb = { version = "0.4.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "2"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
bit_field = { version = "0.10" }
heapless = { version = "0.8", features = ["defmt-03"] }
assign-resources = { version = "0.4" }
num_enum = { version = "0.7", default-features = false }
ambassador = "0.4"
enum_dispatch = "0.3"
#rand = { version = "0.8.4", default-features = false }
#embedded-storage = "0.3.1"
#usbd-hid = "0.8.1"
#serde = { version = "1.0.136", default-features = false }
#binrw = {version = "0.14.1"}

[profile.release]
debug = 2
#opt-level = "z"
#lto = true
#panic = "abort"